--- a/client/marketplace/products/view/other/other.html
+++ b/client/marketplace/products/view/other/other.html
@@ -34,7 +34,7 @@
                                 </h3>
                                 <span class="price">
                                     {{ #if price }}
-                                        {{price}}
+                                        {{currency price}}
                                     {{ else }}
                                         <i>{{_ "marketplace.products.view.otherProducts.price.none"}}</i>
                                     {{ /if }}
