--- a/client/marketplace/products/view/images/images.html
+++ b/client/marketplace/products/view/images/images.html
@@ -1,7 +1,5 @@
 <template name="marketplaceProductsViewImages">
-    {{ #if image }}
-        <div class="images">
-            <img src="{{ image.url }}" />
-        </div>
-    {{ /if }}
+    <div class="images">
+        <img src="{{ url }}" />
+    </div>
 </template>
