--- a/client/marketplace/products/view/view.html
+++ b/client/marketplace/products/view/view.html
@@ -5,7 +5,12 @@
         </a>
         {{ #with product }}
 
+        {{ #if image }}
+        {{ #with image }}
         {{> marketplaceProductsViewImages }}
+        {{ /with }}
+        {{ /if }}
+
         {{> marketplaceProductsViewDetails }}
         {{> marketplaceProductsViewReviews }}
         {{> marketplaceProductsViewOther }}
