--- a/client/layouts/toolbar/toolbar.less
+++ b/client/layouts/toolbar/toolbar.less
@@ -9,16 +9,21 @@
   width: 100%;
   z-index: 100;
 
-  .menuBtn {
+  .menuBtn, .backBtn {
     background: transparent;
     display: block;
     float: left;
     margin: 0;
     padding: 0;
 
-
     .icon-menu {
       line {
+        stroke: white;
+      }
+    }
+
+    .icon-back {
+      polyline {
         stroke: white;
       }
     }
