--- a/client/marketplace/shops/view/images/images.less
+++ b/client/marketplace/shops/view/images/images.less
@@ -5,10 +5,13 @@
     background: @color-main;
     width: 100%;
     position: relative;
+    overflow: hidden;
 
     img {
       width: 100%;
       height: 100%;
+      position: relative;
+      top: 0;
     }
   }
 }
