--- a/client/layouts/main.html
+++ b/client/layouts/main.html
@@ -1,5 +1,8 @@
 <template name="mainLayout">
     <div id="mainLayout">
+        {{ #if isDisconnected }}
+            {{> connectionInfo}}
+        {{ /if }}
         {{> mainMenu}}
         {{> mainToolbar}}
         {{> yield}}
