--- a/client/layouts/toolbar/toolbar.less
+++ b/client/layouts/toolbar/toolbar.less
@@ -9,10 +9,9 @@
   width: 100%;
   z-index: 100;
 
-  .menuBtn, .backBtn {
+  .menuBtn, .backBtn, .cartBtn {
     background: transparent;
     display: block;
-    float: left;
     margin: 0;
     padding: 0;
 
