--- a/client/lib/variables.import.less
+++ b/client/lib/variables.import.less
@@ -44,3 +44,7 @@
 
 @headings-line-height:    1.1;
 @headings-color:          @color-main;
+
+@btn-inverted-color:               white;
+@btn-inverted-bg:                  transparent;
+@btn-inverted-border:              white;
