--- a/client/layouts/menu/menu.html
+++ b/client/layouts/menu/menu.html
@@ -91,8 +91,8 @@
                             {{ profile.lastName }}
                         </div>
                         <div class="actions">
-                            <a class="btn btn-default btn-xs" href="{{pathFor route='profile'}}">Profile</a>
-                            <button class="btn btn-default btn-xs logoutBtn">
+                            <a class="btn btn-inverted btn-xs" href="{{pathFor route='profile'}}">Profile</a>
+                            <button class="btn btn-inverted btn-xs logoutBtn">
                                 Log out
                             </button>
                         </div>
