--- a/client/marketplace/products/view/details/details.html
+++ b/client/marketplace/products/view/details/details.html
@@ -6,11 +6,11 @@
             <span>{{ availability }}</span>
             <p>{{ description }}</p>
             {{ #if inCart }}
-                <button class="btn btn-default btn-block showCartBtn">
+                <button class="btn btn-inverted btn-block showCartBtn">
                     In cart
                 </button>
             {{ else }}
-                <button class="btn btn-default btn-block buyBtn">
+                <button class="btn btn-inverted btn-block buyBtn">
                     {{_ "marketplace.products.view.details.buyBtn.text"}}
                 </button>
             {{ /if }}
