--- a/client/layouts/menu/menu.html
+++ b/client/layouts/menu/menu.html
@@ -105,7 +105,7 @@
             </div>
             {{ else }}
             <div class="auth">
-                <button class="btn btn-default btn-lg btn-block">
+                <button class="btn btn-inverted btn-lg btn-block authBtn">
                     {{_ "menu.auth.authBtn.text"}}
                 </button>
             </div>
