--- a/client/lib/buttons.import.less
+++ b/client/lib/buttons.import.less
@@ -44,3 +44,9 @@
 .btn-inverted {
   .button-variant(@btn-inverted-color; @btn-inverted-bg; @btn-inverted-border);
 }
+
+
+// Danger and error appear as red
+.btn-facebook {
+  .button-variant(@btn-facebook-color; @btn-facebook-bg; @btn-facebook-border);
+}
