--- a/client/lib/variables.import.less
+++ b/client/lib/variables.import.less
@@ -48,3 +48,7 @@
 @btn-inverted-color:               white;
 @btn-inverted-bg:                  transparent;
 @btn-inverted-border:              white;
+
+@btn-facebook-color:               #4e69a2;
+@btn-facebook-bg:                  transparent;
+@btn-facebook-border:              #4e69a2;
