--- a/client/lib/buttons.import.less
+++ b/client/lib/buttons.import.less
@@ -40,13 +40,18 @@
   }
 }
 
-// Danger and error appear as red
 .btn-inverted {
   .button-variant(@btn-inverted-color; @btn-inverted-bg; @btn-inverted-border);
 }
 
-
-// Danger and error appear as red
 .btn-facebook {
   .button-variant(@btn-facebook-color; @btn-facebook-bg; @btn-facebook-border);
+}
+
+.btn-google {
+  .button-variant(@btn-google-color; @btn-google-bg; @btn-google-border);
+}
+
+.btn-twitter {
+  .button-variant(@btn-twitter-color; @btn-twitter-bg; @btn-twitter-border);
 }
