--- a/client/lib/variables.import.less
+++ b/client/lib/variables.import.less
@@ -52,3 +52,11 @@
 @btn-facebook-color:               #4e69a2;
 @btn-facebook-bg:                  transparent;
 @btn-facebook-border:              #4e69a2;
+
+@btn-google-color:                 #dd4b39;
+@btn-google-bg:                    transparent;
+@btn-google-border:                #dd4b39;
+
+@btn-twitter-color:                 #1ab6e9;
+@btn-twitter-bg:                    transparent;
+@btn-twitter-border:                #1ab6e9;
