--- a/client/admin/users/users.less
+++ b/client/admin/users/users.less
@@ -1,5 +1,5 @@
 @import (reference) '../../lib/variables.import.less';
 
 .admin-users-view {
-  margin-top: 48px + @grid-gutter-width / 2;
+  margin-top: 48px;
 }
