--- a/client/lib/variables.import.less
+++ b/client/lib/variables.import.less
@@ -12,6 +12,10 @@
 @gray90:          darken(@white, 90%); //#191919
 @black:           #000;
 
+@facebook-color: #4e69a2;
+@google-color: #dd4b39;
+@twitter-color: #1ab6e9;
+
 @gray-light:      #EEE;
 
 @color-main:            #3DA3A7;
@@ -49,14 +53,14 @@
 @btn-inverted-bg:                  transparent;
 @btn-inverted-border:              white;
 
-@btn-facebook-color:               #4e69a2;
-@btn-facebook-bg:                  transparent;
-@btn-facebook-border:              #4e69a2;
+@btn-facebook-color:               white;
+@btn-facebook-bg:                  @facebook-color;
+@btn-facebook-border:               darken(@facebook-color, 15%);
 
-@btn-google-color:                 #dd4b39;
-@btn-google-bg:                    transparent;
-@btn-google-border:                #dd4b39;
+@btn-google-color:                 white;
+@btn-google-bg:                    @google-color;
+@btn-google-border:                darken(@google-color, 15%);
 
-@btn-twitter-color:                 #1ab6e9;
-@btn-twitter-bg:                    transparent;
-@btn-twitter-border:                #1ab6e9;
+@btn-twitter-color:                white;
+@btn-twitter-bg:                   @twitter-color;
+@btn-twitter-border:               darken(@twitter-color, 15%);
