--- a/client/profile/accounts/google/google.less
+++ b/client/profile/accounts/google/google.less
@@ -20,11 +20,12 @@
           height: 100%;
           width: 100%;
           border-radius: 100%;
+          background: @google-color;
         }
       }
 
-      .actions {
-
+      .name {
+        display: block;
       }
     }
   }
