--- a/client/dialogs/auth/auth.less
+++ b/client/dialogs/auth/auth.less
@@ -1,4 +1,4 @@
-@import (reference) '../lib/variables.import.less';
+@import (reference) '../../lib/variables.import.less';
 
 #authDlg {
   .divider {
