--- a/client/marketplace/products/view/images/images.html
+++ b/client/marketplace/products/view/images/images.html
@@ -1,5 +1,5 @@
 <template name="marketplaceProductsViewImages">
     <div class="images">
-        <img src="{{ url }}" />
+        <img src="{{ abs url }}" />
     </div>
 </template>
