--- a/client/layouts/menu/menu.html
+++ b/client/layouts/menu/menu.html
@@ -49,7 +49,7 @@
                     <li>
                         <a href="{{pathFor route='shops.edit' data=this }}" class="shop">
                             <div class="logo">
-                                <img src="{{logo.url}}">
+                                <img src="{{ abs logo.url }}">
                             </div>
                             {{#if title}}
                                 {{ title }}
