--- a/client/marketplace/products/view/other/other.html
+++ b/client/marketplace/products/view/other/other.html
@@ -6,7 +6,7 @@
             <a href="{{pathFor route='shops.view' data=this }}">
                 {{ #if logo }}
                     <div class="logo">
-                        <img src="{{ logo.url }}" />
+                        <img src="{{ abs logo.url }}" />
                     </div>
                 {{ /if }}
                 <h2>
@@ -22,7 +22,7 @@
                     <div class="col-xs-6 col-sm-4">
                         <a class="product-card" href="{{pathFor route='products.view' data=this }}">
                             {{ #if image }}
-                                <img src="{{ image.url }}" />
+                                <img src="{{ abs image.url }}" />
                             {{ /if }}
                             <div class="info">
                                 <h3>
