--- a/client/marketplace/products/view/images/images.less
+++ b/client/marketplace/products/view/images/images.less
@@ -2,9 +2,8 @@
 
 .marketplace-products-view {
   .images {
-    background: @color-main;
+    background: darken(@brand-primary, 15%);
     width: 100%;
-    position: relative;
     overflow: hidden;
 
     img {
