--- a/client/marketplace/products/view/view.html
+++ b/client/marketplace/products/view/view.html
@@ -8,9 +8,11 @@
         {{ /with }}
         {{ /if }}
 
-        {{> marketplaceProductsViewDetails }}
-        {{> marketplaceProductsViewReviews }}
-        {{> marketplaceProductsViewOther }}
+        <div class="info">
+            {{> marketplaceProductsViewDetails }}
+            {{> marketplaceProductsViewReviews }}
+            {{> marketplaceProductsViewOther }}
+        </div>
 
         {{ /with }}
     </div>
