--- a/client/marketplace/products/view/view.less
+++ b/client/marketplace/products/view/view.less
@@ -1,5 +1,17 @@
+@import (reference) '../../../lib/variables.import.less';
+
 .marketplace-products-view {
-  position: relative;
+
+  .images {
+    position: fixed;
+    top: 0;
+  }
+
+  .info {
+    position: relative;
+    top: 0;
+    background: @body-bg;
+  }
 
   .btn.btn-icon.backBtn {
     position: absolute;
