--- a/client/lib/buttons.import.less
+++ b/client/lib/buttons.import.less
@@ -55,3 +55,7 @@
 .btn-twitter {
   .button-variant(@btn-twitter-color; @btn-twitter-bg; @btn-twitter-border);
 }
+
+.btn-white {
+  .button-variant(@brand-primary; white; white);
+}
