--- a/client/marketplace/products/view/other/other.less
+++ b/client/marketplace/products/view/other/other.less
@@ -2,24 +2,26 @@
 
 .marketplace-products-view {
   .other {
-    background: @color-main;
-    color: white;
 
     h2 {
-      color: white;
 
       small {
-        color: white;
+
       }
     }
 
     .logo {
+      height: 70px;
+      width: 70px;
+      border-radius: 100%;
+      border: 1px solid @brand-primary;
+      padding: 1px;
+
       img {
-        height: 100px;
-        width: 100px;
+        height: 100%;
+        width: 100%;
         border-radius: 100%;
-        border: 3px solid lighten(@brand-primary, 15%);
-        background: lighten(@brand-primary, 15%);
+        background: @brand-primary;
       }
     }
   }
