--- a/client/marketplace/products/view/details/details.less
+++ b/client/marketplace/products/view/details/details.less
@@ -1,12 +1,29 @@
 @import (reference) '../../../../lib/variables.import.less';
+@import (reference) '../../../../lib/mixins.import.less';
 
 .marketplace-products-view {
   .details {
     background: @color-main;
     color: white;
+    padding: @grid-gutter-width/2;
 
-    h1 {
+    .title {
       color: white;
+      font-size: @font-size-large;
+      margin: 0 0 @grid-gutter-width/2 0;
+    }
+
+    .price-info {
+      margin: @grid-gutter-width/2 0;
+      padding-bottom: 5px;
+      .clearfix();
+      border-bottom: 1px solid lighten(@brand-primary, 15%);
+    }
+
+    .description {
+      p {
+        margin-bottom: @grid-gutter-width/2;
+      }
     }
   }
 }
