--- a/client/marketplace/products/view/other/other.less
+++ b/client/marketplace/products/view/other/other.less
@@ -1,7 +1,11 @@
 @import (reference) '../../../../lib/variables.import.less';
+@import (reference) '../../../../lib/mixins.import.less';
 
 .marketplace-products-view {
   .other {
+    padding: @grid-gutter-width/2;
+
+
 
     h2 {
 
@@ -10,19 +14,44 @@
       }
     }
 
-    .logo {
-      height: 70px;
-      width: 70px;
-      border-radius: 100%;
-      border: 1px solid @brand-primary;
-      padding: 1px;
+    .shop {
+      .clearfix();
+      display: block;
+      min-height: 50px;
+      text-decoration: none;
+      margin-bottom: @grid-gutter-width / 2;
 
-      img {
-        height: 100%;
-        width: 100%;
+      .logo {
+        height: 50px;
+        width: 50px;
         border-radius: 100%;
-        background: @brand-primary;
+        border: 1px solid @brand-primary;
+        padding: 1px;
+        float: left;
+        margin-right: @grid-gutter-width / 2;
+
+        img {
+          height: 100%;
+          width: 100%;
+          border-radius: 100%;
+          background: @brand-primary;
+        }
+      }
+
+      .title, .subtitle {
+        margin: 0;
+      }
+
+      .title {
+        font-size: @font-size-large;
+      }
+
+      .subtitle {
+        font-size: @font-size-base;
+        text-transform: none;
+        color: @text-color;
       }
     }
+
   }
 }
