--- a/client/layouts/toolbar/toolbar.html
+++ b/client/layouts/toolbar/toolbar.html
@@ -15,5 +15,9 @@
                 {{> iconCart}}
             </button>
         {{ /if }}
+
+        {{ #if title }}
+        <div class="title">{{ title }}</div>
+        {{ /if }}
     </div>
 </template>
