--- a/client/sell/button/button.less
+++ b/client/sell/button/button.less
@@ -11,7 +11,7 @@
   box-shadow: 0 1px 4px fadeout(black, 50%);
   border: 1px solid @brand-primary;
   padding: 1px;
-
+  background: white;
 
   button {
     background: @brand-primary;
