--- a/client/marketplace/shops/view/products/products.less
+++ b/client/marketplace/shops/view/products/products.less
@@ -2,11 +2,6 @@
 
 .marketplace-shops-view {
   .products {
-    background: @color-main;
-    color: white;
-
-    h2 {
-      color: white;
-    }
+    padding: @grid-gutter-width/2;
   }
 }
