--- a/client/main.less
+++ b/client/main.less
@@ -4,6 +4,11 @@
 @import 'lib/fonts.import.less';
 @import 'lib/buttons.import.less';
 
+html, body {
+  -webkit-font-smoothing: antialiased;
+  text-rendering: optimizeLegibility;
+  letter-spacing: .1;
+}
 
 form.form-horizontal {
   overflow-x: hidden;
