--- a/client/lib/variables.import.less
+++ b/client/lib/variables.import.less
@@ -1,4 +1,5 @@
 @import (reference) 'bootstrap/less/variables.import.less';
+@import (reference) 'bootstrap-material-design/less/variables.import.less';
 
 @white:           #FFF;
 @gray10:          darken(@white, 10%); //#E6E6E6
