--- a/client/lib/bootstrap/less/forms.import.less
+++ b/client/lib/bootstrap/less/forms.import.less
@@ -22,18 +22,18 @@ legend {
   width: 100%;
   padding: 0;
   margin-bottom: @line-height-computed;
-  font-size: @font-size-large;
+  font-size: (@font-size-base * 1.5);
   line-height: inherit;
   color: @legend-color;
   border: 0;
-  text-transform: uppercase;
+  border-bottom: 1px solid @legend-border-color;
 }
 
 label {
   display: inline-block;
   max-width: 100%; // Force IE8 to wrap long content (see https://github.com/twbs/bootstrap/issues/13141)
   margin-bottom: 5px;
-  font-weight: normal;
+  font-weight: bold;
 }
 
 
@@ -124,7 +124,7 @@ output {
   background-image: none; // Reset unusual Firefox-on-Android default style; see https://github.com/necolas/normalize.css/issues/214
   border: 1px solid @input-border;
   border-radius: @input-border-radius;
-//  .box-shadow(inset 0 1px 1px rgba(0,0,0,.075));
+  .box-shadow(inset 0 1px 1px rgba(0,0,0,.075));
   .transition(~"border-color ease-in-out .15s, box-shadow ease-in-out .15s");
 
   // Customize the `:focus` state to imitate native WebKit styles.
@@ -390,7 +390,7 @@ input[type="checkbox"] {
   display: block; // account for any element using help-block
   margin-top: 5px;
   margin-bottom: 10px;
-  color: @gray-light; // lighten the text some for contrast
+  color: lighten(@text-color, 25%); // lighten the text some for contrast
 }
 
 
