bootstrap-material-design Web fonts

--- a/client/lib/bootstrap-material-design/less/material-wfont.less
+++ b/client/lib/bootstrap-material-design/less/material-wfont.less
@@ -25,4 +25,4 @@
   font-weight: 400;
   src: local('RobotoDraft Italic'), local('RobotoDraft-Italic'), local('Roboto-Italic'), url(https://fonts.gstatic.com/s/robotodraft/v1/er-TIW55l9KWsTS1x9bTfgeOulFbQKHxPa89BaxZzA0.woff2) format('woff2'), url(https://fonts.gstatic.com/s/robotodraft/v1/er-TIW55l9KWsTS1x9bTfoo3ZslTYfJv0R05CazkwN8.woff) format('woff');
 }
-@import "material.less";
+@import "material.import.less";
