--- a/client/imageEditor/imageEditor.less
+++ b/client/imageEditor/imageEditor.less
@@ -1,7 +1,7 @@
 @import (reference) '../lib/variables.import.less';
 
 .image-editor {
-  border: 1px solid @brand-primary;
+  border: 1px solid @primary;
   padding: 1px;
   width: 100%;
   position: relative;
