--- a/client/layouts/connection/connection.less
+++ b/client/layouts/connection/connection.less
@@ -18,7 +18,7 @@
     .info {
       top: -50px;
       position: relative;
-      background: @brand-primary;
+      background: @primary;
       padding: 15px;
       text-align: center;
       color: white;
