--- a/client/layouts/toolbar/toolbar.less
+++ b/client/layouts/toolbar/toolbar.less
@@ -1,7 +1,7 @@
 @import (reference) '../../lib/variables.import.less';
 
 #mainToolbar {
-  background: @brand-primary;
+  background: @primary;
   height: 48px;
   line-height: 48px;
   position: fixed;
@@ -40,7 +40,7 @@
   }
 
   &.transparent {
-    background: fade(@brand-primary, 0);
+    background: fade(@primary, 0);
     .title {
       color: fadeout(white, 100%);
     }
