--- a/client/lib/bootstrap-material-design/less/variables.import.less
+++ b/client/lib/bootstrap-material-design/less/variables.import.less
@@ -1,5 +1,5 @@
 // material icons path
-@material-font-path: "../fonts";
+@material-font-path: "/fonts";
 
 // Material colors palette
 @red: #F44336;
@@ -22,7 +22,7 @@
 @lightgrey: #ECECEC;
 
 // Bootstrap shades
-@primary: #009587;
+@primary: #3DA3A7;
 @success: #0F9D58;
 @info: @lightblue;
 @warning: @deeporange;
