--- a/client/management/shops/edit/products/products.less
+++ b/client/management/shops/edit/products/products.less
@@ -46,11 +46,11 @@
     }
 
     h3 {
-      color: darken(@brand-primary, 15%);
+      color: darken(@primary, 15%);
     }
 
     span.price {
-      color: @brand-primary;
+      color: @primary;
     }
   }
 
