--- a/client/marketplace/products/view/images/images.less
+++ b/client/marketplace/products/view/images/images.less
@@ -2,7 +2,7 @@
 
 .marketplace-products-view {
   .images {
-    background: darken(@brand-primary, 15%);
+    background: darken(@primary, 15%);
     width: 100%;
     overflow: hidden;
 
