--- a/client/marketplace/products/view/other/other.less
+++ b/client/marketplace/products/view/other/other.less
@@ -25,7 +25,7 @@
         height: 50px;
         width: 50px;
         border-radius: 100%;
-        border: 1px solid @brand-primary;
+        border: 1px solid @primary;
         padding: 1px;
         float: left;
         margin-right: @grid-gutter-width / 2;
@@ -34,7 +34,7 @@
           height: 100%;
           width: 100%;
           border-radius: 100%;
-          background: @brand-primary;
+          background: @primary;
         }
       }
 
