--- a/client/orders/view/details/details.less
+++ b/client/orders/view/details/details.less
@@ -6,7 +6,7 @@
       height: 75px;
       width: 75px;
       background: transparent;
-      border: 1px solid @brand-primary;
+      border: 1px solid @primary;
       border-radius: 100%;
       padding: 1px;
       display: block;
