--- a/client/layouts/cart/cart.less
+++ b/client/layouts/cart/cart.less
@@ -34,7 +34,7 @@
       margin: 0;
 
       h1 {
-        color: @brand-primary;
+        color: @primary;
         height: 48px;
         margin: 0 48px;
         padding: 0 @grid-gutter-width / 2;
@@ -72,7 +72,7 @@
           height: 48px;
           width: 48px;
           padding: 1px;
-          border: 1px solid @brand-primary;
+          border: 1px solid @primary;
           float: left;
           margin-right: 15px;
 
@@ -100,7 +100,7 @@
           text-overflow: ellipsis;
         }
         .price {
-          color: @brand-primary;
+          color: @primary;
         }
       }
     }
