--- a/client/layouts/menu/menu.less
+++ b/client/layouts/menu/menu.less
@@ -36,14 +36,14 @@
         padding: 8px;
         height: 48px;
         width: 48px;
-        background: @brand-primary;
+        background: @primary;
         polygon {
           fill: white;
         }
       }
 
       .brand {
-        color: @brand-primary;
+        color: @primary;
         height: 48px;
         margin: 0 48px;
         padding: 0 @grid-gutter-width / 2;
@@ -128,7 +128,7 @@
           vertical-align: middle;
           line-height: @line-height-computed;
 
-          border: 1px solid @brand-primary;
+          border: 1px solid @primary;
           border-radius: 100%;
           padding: 1px;
 
@@ -144,7 +144,7 @@
     }
 
     .profile, .auth {
-      background: @brand-primary;
+      background: @primary;
       position: absolute;
       width: 100%;
       height: 130px;
