--- a/client/lib/variables.import.less
+++ b/client/lib/variables.import.less
@@ -55,3 +55,5 @@
 @btn-twitter-color:                white;
 @btn-twitter-bg:                   @twitter-color;
 @btn-twitter-border:               darken(@twitter-color, 15%);
+
+@navbar-height:                    48px;
