--- a/client/main.less
+++ b/client/main.less
@@ -6,6 +6,7 @@
 @import (reference) 'lib/mixins.import.less';
 @import 'lib/fonts.import.less';
 @import 'lib/buttons.import.less';
+@import 'lib/navbar.import.less';
 
 html, body {
   -webkit-font-smoothing: antialiased;
