--- a/client/layouts/toolbar/toolbar.less
+++ b/client/layouts/toolbar/toolbar.less
@@ -1,43 +1,17 @@
 @import (reference) '../../lib/variables.import.less';
 
 #mainToolbar {
-  background: @primary;
-  height: 48px;
-  line-height: 48px;
-  position: fixed;
-  top: 0;
-  width: 100%;
-  z-index: 100;
-  transition: background-color .25s;
-
-  .menuBtn, .backBtn, .cartBtn {
-    background: transparent;
-    display: block;
-    margin: 0;
-    padding: 0;
-
-    .icon-menu {
-      line {
-        stroke: white;
-      }
+    transition: background-color .25s;
+    .menuBtn, .backBtn {
+        height: @navbar-height;
+        width: @navbar-height;
+        padding: @navbar-height / 4;
+        margin: 0;
+        font-size: @navbar-height / 2;
+        line-height: 1;
+        color: white;
+        border-radius: 0;
     }
-
-    .icon-back {
-      polyline {
-        stroke: white;
-      }
-    }
-  }
-
-  .title {
-    color: white;
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    font-size: @font-size-large;
-    text-transform: uppercase;
-    transition: color .25s;
-  }
 
   &.transparent {
     background: fade(@primary, 0);
